# jfibsem_dat

./: .editorconfig  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tsv_codegen.py
.github/workflows/: ci.yaml
fibsemtools/: read.py
jfibsem_dat/: __init__.py  calibrate.py  cli.py  multi.py  parse_tsv.py  read.py  serve.py  version.py
jfibsem_dat/core/: parse_tsv.py
jfibsem_dat/metadata/: __init__.py  base.py  versions.py
reference/: fibsem2tiff.m  readfibsem.m
tests/: conftest.py  test_fibsemtools.py  test_jfibsem_dat.py  test_read.py  test_tsv_read.py
tests/fixtures/: Merlin-6281_19-08-09_120426_0-0-0.header
